Lesson_11 page object refactoring in progress